added en to ar in booking page

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -17,5 +17,43 @@
   "reviews": "5 تقييمات",
   "aboutTitle": "نبذة",
   "aboutDescription": "راشد، شخصية إماراتية عامة من أبوظبي، يقدم خدمات مؤثرة تشمل التدريب الشخصي 1:1، مشاركة القصص عبر منصاته، إلقاء الكلمات التحفيزية في الفعاليات، والتعاون مع العلامات التجارية — وكل ذلك بهدف تمكين المجتمع من خلال التواصل الحقيقي.",
-  "getStarted": "ابدأ الآن"
+  "getStarted": "ابدأ الآن",
+  "title": "المساعدة والمعلومات",
+  "howToBookTitle": "كيفية حجز موعد؟",
+  "steps": [
+    "اختر الخدمة\nتصفح قائمة الخدمات واختر الخدمة التي تحتاجها.",
+    "اكتب الموضوع والوصف\nاشرح سبب الموعد ووصف طلبك باختصار لمساعدتنا في التحضير بشكل أفضل.",
+    "اختر التاريخ والوقت\nحدد الموعد المناسب حسب التوفر.",
+    "التأكيد والدفع\nقم بتأكيد بياناتك والدفع بأمان عبر Stripe باستخدام البطاقة.",
+    "تأكيد الحجز\nبعد إتمام الدفع، يتم تأكيد موعدك."
+  ],
+  "afterBookingTitle": "ماذا يحدث بعد الحجز؟",
+  "afterBookingText": "بعد تأكيد الحجز، سيتواصل فريقنا معك عبر الاتصال أو واتساب لتنسيق تفاصيل الخدمة.",
+  "paymentTitle": "معلومات الدفع",
+  "paymentText": "تتم جميع عمليات الدفع بشكل آمن عبر Stripe، إحدى أكثر بوابات الدفع موثوقية في العالم. يمكنك الدفع باستخدام بطاقة الخصم أو الائتمان داخل التطبيق.\n\nبعد نجاح الدفع، ستتلقى تأكيدًا على الشاشة وإيصالًا اختياريًا عبر البريد الإلكتروني.",
+  "rescheduleTitle": "إعادة جدولة الموعد",
+  "rescheduleText": "إذا كنت بحاجة إلى تغيير موعدك، يرجى التواصل معنا في أقرب وقت ممكن وتزويدنا بتفاصيل الحجز. تعتمد خيارات إعادة الجدولة على توفر الخدمة.",
+  "contactTitle": "الدعم الفني",
+  "contactText": "لأي استفسارات أو مساعدة، لا تتردد في التواصل معنا عبر صفحة اتصل بنا أو عبر البريد الإلكتروني.",
+  "privacyTitle": "الخصوصية وأمان البيانات",
+  "privacyText": "نحن نقدر خصوصيتك. يتم تخزين جميع بياناتك الشخصية وبيانات الدفع بشكل آمن ولا تتم مشاركتها مع أي جهة خارجية.",
+  "privacyPolicy": "سياسة الخصوصية",
+  "termsAccepted": "لقد وافقت على اتفاقية الشروط والأحكام",
+  "welcome": "مرحباً",
+  "bookingIntro": "يرجى تعبئة التفاصيل لحجز خدمتك",
+  "selectService": "اختر الخدمة",
+  "chooseService": "اختر خدمة",
+  "loadingServices": "جاري تحميل الخدمات...",
+  "viewDetails": "عرض التفاصيل",
+  "close": "إغلاق",
+  "serviceDescription": "وصف الخدمة",
+  "enterTopic": "أدخل الموضوع",
+  "enterTopicPlaceholder": "أدخل الموضوع",
+  "additionalNotes": "ملاحظات إضافية",
+  "additionalNotesPlaceholder": "ملاحظات إضافية...",
+  "selectDateTime": "اختر التاريخ والوقت",
+  "selectAvailableSlot": "اختر الموعد المتاح",
+  "confirmAndPay": "تأكيد والدفع",
+  "error": "خطأ",
+  "fillRequiredFields": "يرجى تعبئة جميع الحقول المطلوبة."
 }
