--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -12,5 +12,48 @@
   "contactUs": "Contact Us",
   "collaboration": "Collaboration",
   "profile": "Profile",
-  "helpInfo": "Help & Info"
+  "helpInfo": "Help & Info",
+  "name": "Rashid Bahattab",
+  "reviews": "5 reviews",
+  "aboutTitle": "About",
+  "aboutDescription": "Rashid, an Emirati public figure from Abu Dhabi, UAE, offers transformative services including 1:1 lifestyle coaching, story-sharing features on his platforms, motivational event speaking, and brand collaborations — all designed to empower his community through authentic connection.",
+  "getStarted": "Get Started",
+  "title": "Help & Info",
+  "howToBookTitle": "How to Book an Appointment?",
+  "steps": [
+    "Choose a Service\nBrowse through our list and pick the service you need.",
+    "Type Your Topic & Description\nTell us what the appointment is about and briefly describe your concern or request — this helps us prepare better.",
+    "Choose a Date & Time\nPick your preferred appointment slot based on availability.",
+    "Confirm & Pay\nConfirm your details and pay securely via Stripe using your debit or credit card.",
+    "Booking Confirmation\nOnce payment is done, your appointment is confirmed."
+  ],
+  "afterBookingTitle": "What Happens After Booking?",
+  "afterBookingText": "Once your booking is confirmed, our team will reach out to you via call or WhatsApp to finalize the service details.",
+  "paymentTitle": "Payment Information",
+  "paymentText": "All payments are processed securely through Stripe, one of the world's most trusted payment gateways. You can pay using your debit/credit card directly within the app.\n\nOnce the payment is successful, you'll receive an on-screen confirmation and an optional email receipt.",
+  "rescheduleTitle": "Rescheduling",
+  "rescheduleText": "If you need to change your appointment, please use our Contact Us form as soon as possible and provide your booking details so we can assist you accordingly. Rescheduling options may depend on service availability.",
+  "contactTitle": "Contact Support",
+  "contactText": "For any support-related questions or concerns, feel free to reach out to us through our Contact Us page or email us directly.",
+  "privacyTitle": "Privacy & Data Security",
+  "privacyText": "We value your privacy. All your personal and payment details are stored securely and are not shared with any third parties.",
+  "privacyPolicy": "Privacy Policy",
+  "termsAccepted": "You have accepted our Terms and Conditions Agreement",
+  "welcome": "Welcome",
+  "bookingIntro": "Please fill out the details to Book Your Service",
+  "selectService": "Select Service",
+  "chooseService": "Choose a service",
+  "loadingServices": "Loading services...",
+  "viewDetails": "View Details",
+  "close": "Close",
+  "serviceDescription": "Service Description",
+  "enterTopic": "Enter Topic",
+  "enterTopicPlaceholder": "Enter topic",
+  "additionalNotes": "Additional Notes",
+  "additionalNotesPlaceholder": "Additional notes...",
+  "selectDateTime": "Select Date & Time",
+  "selectAvailableSlot": "Select Available Slot",
+  "confirmAndPay": "Confirm & Pay",
+  "error": "Error",
+  "fillRequiredFields": "Please fill in all required fields."
 }
