updated language change feature in ChangePasswordScreen as well

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -55,5 +55,57 @@
   "selectAvailableSlot": "اختر الموعد المتاح",
   "confirmAndPay": "تأكيد والدفع",
   "error": "خطأ",
-  "fillRequiredFields": "يرجى تعبئة جميع الحقول المطلوبة."
+  "fillRequiredFields": "يرجى تعبئة جميع الحقول المطلوبة.",
+  "contactIntro": "يرجى تعبئة النموذج أدناه وسنقوم بالرد عليك في أقرب وقت ممكن.",
+  "Name": "الاسم",
+  "email": "البريد الإلكتروني",
+  "category": "الفئة",
+  "message": "الرسالة",
+  "messagePlaceholder": "اكتب رسالتك هنا...",
+  "submit": "إرسال",
+  "selectCategory": "-- اختر الفئة --",
+  "brandCollaboration": "تعاون مع العلامات التجارية",
+  "feedbackSuggestions": "ملاحظات / اقتراحات",
+  "complaintIssue": "شكوى",
+  "generalEnquiry": "استفسار عام",
+  "validationError": "خطأ في التحقق",
+  "selectCategoryError": "يرجى اختيار فئة.",
+  "enterMessageError": "يرجى إدخال الرسالة.",
+  "success": "تم بنجاح",
+  "formSubmitted": "تم إرسال النموذج بنجاح.",
+  "Error": "خطأ",
+  "submitFailed": "فشل في إرسال النموذج. يرجى المحاولة مرة أخرى.",
+  "somethingWentWrong": "حدث خطأ ما. يرجى المحاولة مرة أخرى.",
+  "updateProfileTitle": "تحديث الملف الشخصي",
+  "updateProfileFirstName": "الاسم الأول",
+  "updateProfileLastName": "اسم العائلة",
+  "updateProfileEmail": "البريد الإلكتروني",
+  "updateProfilePhone": "رقم الهاتف",
+  "updateProfileDob": "تاريخ الميلاد",
+  "updateProfileSelectDob": "اختر تاريخ الميلاد",
+  "updateProfileGender": "الجنس",
+  "updateProfileSelectGender": "اختر الجنس",
+  "updateProfileGenderMale": "ذكر",
+  "updateProfileGenderFemale": "أنثى",
+  "updateProfileGenderPreferNot": "أفضل عدم الإفصاح",
+  "updateProfileButton": "تحديث الملف الشخصي",
+  "updateProfileDeleteAccount": "حذف الحساب",
+  "updateProfileValidationError": "يرجى تعبئة جميع الحقول المطلوبة.",
+  "updateProfileSuccess": "تم تحديث الملف الشخصي بنجاح.",
+  "updateProfileServerError": "خطأ في الخادم. حاول مرة أخرى.",
+  "changePasswordTitle": "تغيير كلمة المرور",
+  "changePasswordHeader": "تغيير كلمة المرور",
+  "changePasswordSubHeader": "حافظ على أمان حسابك من خلال تحديث كلمة المرور بانتظام.",
+  "oldPassword": "كلمة المرور الحالية",
+  "oldPasswordPlaceholder": "أدخل كلمة المرور الحالية",
+  "newPassword": "كلمة المرور الجديدة",
+  "newPasswordPlaceholder": "أنشئ كلمة مرور جديدة قوية",
+  "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
+  "confirmNewPasswordPlaceholder": "أكد كلمة المرور الجديدة",
+  "updatePasswordButton": "تحديث كلمة المرور",
+  "changePasswordFillAll": "يرجى تعبئة جميع الحقول",
+  "changePasswordMismatch": "كلمتا المرور الجديدتان غير متطابقتين",
+  "changePasswordSuccess": "تم تغيير كلمة المرور بنجاح!",
+  "changePasswordIncorrectOld": "كلمة المرور الحالية غير صحيحة.",
+  "changePasswordError": "حدث خطأ ما. يرجى المحاولة مرة أخرى."
 }
