--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -55,5 +55,57 @@
   "selectAvailableSlot": "Select Available Slot",
   "confirmAndPay": "Confirm & Pay",
   "error": "Error",
-  "fillRequiredFields": "Please fill in all required fields."
+  "fillRequiredFields": "Please fill in all required fields.",
+  "contactIntro": "Please fill out the form below and we'll get back to you as soon as possible.",
+  "Name": "Name",
+  "email": "Email",
+  "category": "Category",
+  "message": "Message",
+  "messagePlaceholder": "Write your message here...",
+  "submit": "Submit",
+  "selectCategory": "-- Select Category --",
+  "brandCollaboration": "Brand Collaboration",
+  "feedbackSuggestions": "Feedback / Suggestions",
+  "complaintIssue": "Complaint Issue",
+  "generalEnquiry": "General Enquiry",
+  "validationError": "Validation Error",
+  "selectCategoryError": "Please select a category.",
+  "enterMessageError": "Please enter your message.",
+  "success": "Success",
+  "formSubmitted": "Your form has been submitted successfully.",
+  "Error": "Error",
+  "submitFailed": "Failed to submit feedback. Please try again.",
+  "somethingWentWrong": "Something went wrong. Please try again.",
+  "updateProfileTitle": "Update Profile",
+  "updateProfileFirstName": "First Name",
+  "updateProfileLastName": "Last Name",
+  "updateProfileEmail": "Email",
+  "updateProfilePhone": "Phone Number",
+  "updateProfileDob": "Date of Birth",
+  "updateProfileSelectDob": "Select DOB",
+  "updateProfileGender": "Gender",
+  "updateProfileSelectGender": "Select Gender",
+  "updateProfileGenderMale": "Male",
+  "updateProfileGenderFemale": "Female",
+  "updateProfileGenderPreferNot": "Prefer Not to Say",
+  "updateProfileButton": "Update Profile",
+  "updateProfileDeleteAccount": "Delete Account",
+  "updateProfileValidationError": "Please fill in all required fields.",
+  "updateProfileSuccess": "Your profile has been updated.",
+  "updateProfileServerError": "Server error. Please try again.",
+  "changePasswordTitle": "Change Password",
+  "changePasswordHeader": "Change Password",
+  "changePasswordSubHeader": "Ensure your account is secure by updating your password regularly.",
+  "oldPassword": "Old Password",
+  "oldPasswordPlaceholder": "Enter your current password",
+  "newPassword": "New Password",
+  "newPasswordPlaceholder": "Create a strong new password",
+  "confirmNewPassword": "Confirm New Password",
+  "confirmNewPasswordPlaceholder": "Confirm your new password",
+  "updatePasswordButton": "Update Password",
+  "changePasswordFillAll": "Please fill in all fields",
+  "changePasswordMismatch": "New passwords do not match",
+  "changePasswordSuccess": "Password changed successfully!",
+  "changePasswordIncorrectOld": "Old password is incorrect.",
+  "changePasswordError": "Something went wrong. Please try again."
 }
