added proper text mapping in all the screens

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -5,7 +5,7 @@
   "myBookings": "حجوزاتي",
   "paymentHistory": "سجل الدفع",
   "changePassword": "تغيير كلمة المرور",
-  "about": "عن راشد بحطب",
+  "about": "عن راشد باحطّاب",
   "help": "مساعدة ومعلومات",
   "logout": "تسجيل خروج",
   "bookTalk": "احجز جلسة",
@@ -13,7 +13,7 @@
   "collaboration": "تعاون",
   "profile": "الملف الشخصي",
   "helpInfo": "المساعدة والمعلومات",
-  "name": "راشد بحطب",
+  "name": "راشد باحطّاب",
   "reviews": "5 تقييمات",
   "aboutTitle": "نبذة",
   "aboutDescription": "راشد، شخصية إماراتية عامة من أبوظبي، يقدم خدمات مؤثرة تشمل التدريب الشخصي 1:1، مشاركة القصص عبر منصاته، إلقاء الكلمات التحفيزية في الفعاليات، والتعاون مع العلامات التجارية — وكل ذلك بهدف تمكين المجتمع من خلال التواصل الحقيقي.",
@@ -32,7 +32,7 @@
   "paymentTitle": "معلومات الدفع",
   "paymentText": "تتم جميع عمليات الدفع بشكل آمن عبر Stripe، إحدى أكثر بوابات الدفع موثوقية في العالم. يمكنك الدفع باستخدام بطاقة الخصم أو الائتمان داخل التطبيق.\n\nبعد نجاح الدفع، ستتلقى تأكيدًا على الشاشة وإيصالًا اختياريًا عبر البريد الإلكتروني.",
   "rescheduleTitle": "إعادة جدولة الموعد",
-  "rescheduleText": "إذا كنت بحاجة إلى تغيير موعدك، يرجى التواصل معنا في أقرب وقت ممكن وتزويدنا بتفاصيل الحجز. تعتمد خيارات إعادة الجدولة على توفر الخدمة.",
+  "rescheduleText": "يمكن للمستخدمين إعادة جدولة الجلسات المحجوزة عن طريق تقديم إشعار مسبق 24 ساعة على الأقل عبر نموذج اتصل بنا داخل التطبيق. يمكن إعادة جدولة الجلسات مرة واحدة فقط لكل حجز. سيؤدي الفشل في تقديم الإشعار في الوقت المناسب إلى فقدان الجلسة دون استرداد.",
   "contactTitle": "الدعم الفني",
   "contactText": "لأي استفسارات أو مساعدة، لا تتردد في التواصل معنا عبر صفحة اتصل بنا أو عبر البريد الإلكتروني.",
   "privacyTitle": "الخصوصية وأمان البيانات",
@@ -107,5 +107,33 @@
   "changePasswordMismatch": "كلمتا المرور الجديدتان غير متطابقتين",
   "changePasswordSuccess": "تم تغيير كلمة المرور بنجاح!",
   "changePasswordIncorrectOld": "كلمة المرور الحالية غير صحيحة.",
-  "changePasswordError": "حدث خطأ ما. يرجى المحاولة مرة أخرى."
+  "changePasswordError": "حدث خطأ ما. يرجى المحاولة مرة أخرى.",
+  "loginTitle": "تسجيل الدخول",
+  "loginUsernamePlaceholder": "اسم المستخدم أو رقم الجوال",
+  "loginPasswordPlaceholder": "كلمة المرور",
+  "forgotPassword": "نسيت كلمة المرور؟",
+  "loginButton": "تسجيل الدخول",
+  "loggingIn": "جاري تسجيل الدخول...",
+  "googleSignIn": "تسجيل الدخول باستخدام Google",
+  "noAccount": "ليس لديك حساب؟",
+  "register": "تسجيل",
+  "googleWelcome": "مرحباً",
+  "googleCompleteProfile": "يرجى إكمال ملفك الشخصي",
+  "googlePhonePlaceholder": "رقم الهاتف",
+  "googlePasswordPlaceholder": "كلمة المرور",
+  "googleConfirmPasswordPlaceholder": "تأكيد كلمة المرور",
+  "googleContinue": "متابعة",
+  "googleCancel": "إلغاء",
+  "confirmed": "تم التأكيد",
+  "myBooking": "حجوزاتي",
+  "paymentHistorys": "سجل المدفوعات",
+  "completed": "مكتمل","createProfileTitle": "إنشاء ملفك الشخصي",
+  "createProfileSubtitle": "قم بإدخال بياناتك للبدء.",
+  "firstName": "الاسم الأول",
+  "lastName": "اسم العائلة",
+  "phoneNumber": "رقم الهاتف",
+  "password": "كلمة المرور",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "signUp": "إنشاء حساب",
+  "AskRashid": "أسأل راشد"
 }
