--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -32,7 +32,7 @@
   "paymentTitle": "Payment Information",
   "paymentText": "All payments are processed securely through Stripe, one of the world's most trusted payment gateways. You can pay using your debit/credit card directly within the app.\n\nOnce the payment is successful, you'll receive an on-screen confirmation and an optional email receipt.",
   "rescheduleTitle": "Rescheduling",
-  "rescheduleText": "If you need to change your appointment, please use our Contact Us form as soon as possible and provide your booking details so we can assist you accordingly. Rescheduling options may depend on service availability.",
+  "rescheduleText": "Users may reschedule booked sessions by providing at least 24 hours advance notice through the in-app Contact Us form. Sessions can be rescheduled only once per booking. Failure to provide timely notice will result in forfeiture of the session without refund.",
   "contactTitle": "Contact Support",
   "contactText": "For any support-related questions or concerns, feel free to reach out to us through our Contact Us page or email us directly.",
   "privacyTitle": "Privacy & Data Security",
@@ -107,5 +107,34 @@
   "changePasswordMismatch": "New passwords do not match",
   "changePasswordSuccess": "Password changed successfully!",
   "changePasswordIncorrectOld": "Old password is incorrect.",
-  "changePasswordError": "Something went wrong. Please try again."
+  "changePasswordError": "Something went wrong. Please try again.",
+  "loginTitle": "Log In",
+  "loginUsernamePlaceholder": "Username or Mobile",
+  "loginPasswordPlaceholder": "Password",
+  "forgotPassword": "Forgot Password?",
+  "loginButton": "LOG IN",
+  "loggingIn": "Logging in...",
+  "googleSignIn": "Sign in with Google",
+  "noAccount": "Don't have an account?",
+  "register": "Register",
+  "googleWelcome": "👋 Welcome",
+  "googleCompleteProfile": "Please complete your profile",
+  "googlePhonePlaceholder": "Phone Number",
+  "googlePasswordPlaceholder": "Password",
+  "googleConfirmPasswordPlaceholder": "Confirm Password",
+  "googleContinue": "Continue",
+  "googleCancel": "Cancel",
+  "confirmed": "Confirmed",
+  "myBooking": "My Bookings",
+  "paymentHistorys": "Payment History",
+  "AskRashid": "Ask Rashid",
+  "completed": "Completed",
+  "createProfileTitle": "Create Your Profile",
+  "createProfileSubtitle": "Fill in your details to get started.",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "phoneNumber": "Phone Number",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "signUp": "Sign Up"
 }
